service/src/main/java/org/example/service/core/dto/error/ErrorCode.java
package org.example.service.core.dto.error;

public enum ErrorCode {
    ERROR,
    STRUCTURED_ERROR
}
